HW8/E-3.1.17-Reversename/wdir_msg/compile.err

Reversename.java:16: error: cannot find symbol
        String[] parts = domain.split("\\.");
                         ^
  symbol:   variable domain
  location: class Reversename
1 error


